--- a/package.json
+++ b/package.json
@@ -1,35 +1,25 @@
 {
-  "name": "nextn",
+  "name": "minimalist-muse",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 9002",
-    "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
-    "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "^1.0.4",
-    "@genkit-ai/next": "^1.0.4",
     "@tailwindcss/typography": "^0.5.16",
-    "@tanstack-query-firebase/react": "^1.0.5",
-    "@tanstack/react-query": "^5.66.0",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "firebase": "^11.3.0",
-    "genkit": "^1.0.4",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
     "next-themes": "^0.3.0",
-    "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recharts": "^2.15.1",
     "remark": "^15.0.1",
-    "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1",
     "zod": "^3.24.2"
   },
@@ -37,8 +27,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "genkit-cli": "^1.0.4",
+    "eslint": "^8",
+    "eslint-config-next": "15.2.3",
     "postcss": "^8",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
